<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/homeTab"
        android:title="@string/Home" />
    <item
        android:id="@+id/settingsTab"
        android:title="@string/settings" />

    <item
        android:id="@+id/faqTab"
        android:title="FAQ" />

    <item
        android:id="@+id/exitTab"
        android:icon="@drawable/ic_exit"
        android:title="Exit"
        app:showAsAction="never" />


    <item android:title="@string/directory">
        <menu>
            <item
                android:id="@+id/directory1"
                android:title="section 1" />
            <item
                android:id="@+id/directory2"
                android:title="section 2" />
            <item
                android:id="@+id/directory3"
                android:title="section 3" />
            <item
                android:id="@+id/directory4"
                android:title="section 4" />
            <item
                android:id="@+id/directory5"
                android:title="problems" />
            <item
                android:id="@+id/directory6"
                android:title="additional resources"/>



        </menu>
    </item>
</menu>


